2003-06-13  Mikael Hallendal  <micke@imendio.com>

	* AUTHORS: updated contact information
	* README: updated contact information
	* loudmouth/*.[ch]: updated email address
	* loudmouth/lm-message-node.c: don't lower case the XML
	* loudmouth/lm-message.c:
	(message_type_from_string): use strcmp rather than strcasecmp
	* loudmouth/lm-parser.c: 
	(parser_start_node_cb),
	(parser_end_node_cb), 
	(lm_parser_new): use strcmp instead of strcasecmp

2003-06-11  Mikael Hallendal  <micke@codefactory.se>

	* docs/reference/loudmouth-sections.txt: Added new functions

	* loudmouth/lm-message-node.c: 
	(_lm_message_node_new): Set node->raw_mode = FALSE.
	(lm_message_node_get_raw_mode): Added
	(lm_message_node_set_raw_mode): Added
	(lm_message_node_to_string): Don't escape if raw_mode == TRUE
	
	* loudmouth/lm-message-node.h: Added new functions.

2003-04-26  Mikael Hallendal  <micke@codefactory.se>

        * loudmouth.spec.in: Enable gtk-doc
 
        * Released 0.9.1

2003-04-17  Mikael Hallendal  <micke@codefactory.se>

	* docs/reference/Makefile.am: Make --disable-gtk-doc not try to 
	  install the documents :) Fixes #633, patch by Kevin Dougherty.
	
	* loudmouth/lm-debug.c: Make build work with --disable-debug, 
	  fixes #634, patch by Kevin Dougherty.

2003-04-11  Mikael Hallendal  <micke@codefactory.se>

	* NEWS: More updates
	
	* configure.in: Bumped version to 0.9
	
	* loudmouth.spec.in: Fixed
	
	* loudmouth/lm-connection.c:
	(lm_connection_send_with_reply_and_block): Removed debug output.
	
2003-04-10  Mikael Hallendal  <micke@codefactory.se>

        * NEWS: Updated for upcoming 0.9 release.
	
2003-04-07  Mikael Hallendal  <micke@codefactory.se>

	* README: Added information about debug output.
	
	* loudmouth/lm-connection.c: 
	(connection_in_event): Use a define for IN_BUFFER_SIZE

2003-04-07  Mikael Hallendal  <micke@codefactory.se>

	* README:
	* loudmouth/lm-connection.c: (connection_in_event):

2003-04-07  Mikael Hallendal  <micke@codefactory.se>
