@@ -273,7 +273,7 @@ lm_message_get_type (LmMessage *message)
  * 
  * Return value: the message sub type
  **/
-LmMessageType
+LmMessageSubType
 lm_message_get_sub_type (LmMessage *message)
 {
 	g_return_val_if_fail (message != NULL, LM_MESSAGE_TYPE_UNKNOWN);
